--- a/packages/common/src/assets/styles/_layout.scss
+++ b/packages/common/src/assets/styles/_layout.scss
@@ -1,13 +1,10 @@
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  *   Layout ~ Common
  *~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-html {
-  -ms-overflow-style: -ms-autohiding-scrollbar;
-}
 
 .main-container {
   display: flex;
-  overflow-y: auto !important;
+  overflow-y: visible !important;
 }
 
 .package-layout {
